[metadata]
name = python_vthunderclient
summary = OpenStack CLI for A10Networks Load Balancing
description-file =
    README.rst
author = Michael Durrant
author-email = mdurrant@a10networks.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    python_vthunderclient

[entry_points]

console_scripts = 
    vthunder = python_vthunderclient.cmd.vthunder:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = python_vthunderclient/locale
domain = python_vthunderclient

[update_catalog]
domain = python_vthunderclient
output_dir = python_vthunderclient/locale
input_file = python_vthunderclient/locale/python_vthunderclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = python_vthunderclient/locale/python_vthunderclient.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
